加入一些独立jQuery插件

--- a/src/main/webapp/WEB-INF/views/skys.html
+++ b/src/main/webapp/WEB-INF/views/skys.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" content-type="text/javascript">
     <link rel="stylesheet" href="/my-jquery-plug/sky-chezi-effects/sky-long/index.css">
     <script type="text/javascript" src="/my-jquery-plug/sky-chezi-effects/sky-long/jquery.min.js"></script>
+    <link rel="stylesheet" href="/my-jquery-plug/point-clay-effects/css.css">
 </head>
 <body class="zh" id="wrapper">
 <div id="fullpage">
@@ -14,7 +15,22 @@
     </div>
     <!-- footer  -->
     <footer>
-        我是底裤
+        <svg class="filter" version="1.1">
+            <defs>
+                <filter id="gooeyness">
+                    <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+                    <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 20 -10" result="gooeyness" />
+                    <feComposite in="SourceGraphic" in2="gooeyness" operator="atop" />
+                </filter>
+            </defs>
+        </svg>
+        <div class="dots">
+            <div class="dot mainDot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
     </footer>
 
 </div>
